[gd_scene load_steps=6 format=2]

[ext_resource path="res://shared/scripts/ui/keys/arrow_keys.gd" type="Script" id=1]
[ext_resource path="res://shared/scenes/ui/keys/right_key.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/scenes/ui/keys/left_key.tscn" type="PackedScene" id=3]
[ext_resource path="res://shared/scenes/ui/keys/up_key.tscn" type="PackedScene" id=4]
[ext_resource path="res://shared/scenes/ui/keys/down_key.tscn" type="PackedScene" id=5]

[node name="ArrowKeys" type="Node2D"]
script = ExtResource( 1 )

[node name="UpKey" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -20 )

[node name="DownKey" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 20 )

[node name="LeftKey" parent="." instance=ExtResource( 3 )]
position = Vector2( -40, 20 )

[node name="RightKey" parent="." instance=ExtResource( 2 )]
position = Vector2( 40, 20 )
